--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BusinessTimerNew</string>
+    <string name="app_name">Business Timer</string>
     <string name="channel_name">ChannelName</string>
     <string name="channel_description">ChannelDescription</string>
 </resources>
